--- a/app/src/main/res/layout/league_api.xml
+++ b/app/src/main/res/layout/league_api.xml
@@ -9,7 +9,7 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
         <androidx.cardview.widget.CardView
-            android:id="@+id/search_list_cv"
+            android:id="@+id/cv_league"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">000000
             <LinearLayout
@@ -104,6 +104,7 @@
                         android:layout_height="match_parent"
                         android:orientation="vertical">
                         <TextView
+                            android:id="@+id/tv_league_api"
                             android:drawablePadding="10dp"
                             android:padding="5dp"
                             android:layout_width="match_parent"
@@ -112,6 +113,7 @@
 
                         </TextView>
                         <TextView
+                            android:id="@+id/tv_sport_api"
                             android:drawablePadding="10dp"
                             android:padding="5dp"
                             android:layout_width="match_parent"
@@ -120,6 +122,7 @@
 
                         </TextView>
                         <TextView
+                            android:id="@+id/tv_alternate_api"
                             android:drawablePadding="10dp"
                             android:padding="5dp"
                             android:layout_width="match_parent"
