--- a/app/src/main/res/layout/league_api.xml
+++ b/app/src/main/res/layout/league_api.xml
@@ -3,8 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
     <LinearLayout
+
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
@@ -13,6 +14,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">000000
             <LinearLayout
+                android:layout_margin="10dp"
+                android:background="#9EAAED"
                 android:padding="10dp"
                 android:layout_gravity="center"
                 android:gravity="center"
