--- a/app/src/main/res/menu/btm_nav.xml
+++ b/app/src/main/res/menu/btm_nav.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:id="@+id/buy_look_for"
+    <item android:id="@+id/league"
         android:icon="@drawable/ic_baseline_sports_soccer_24"
         android:title="Look Bagagge" />
 
-    <item android:id="@+id/buy_on_prog"
+    <item android:id="@+id/league_fav"
         android:icon="@drawable/ic_baseline_favorite_24"
         android:title="On Progress" />
 
